Fixed DateDisplay not showing data/Changed header/calendar layout to use react-flexbox-grid

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,8 +22,14 @@
 }
 
 .App-header {
-  height: 350px;
+  //height: 350px;
+  width: 100%;
+  height: 100%;
   font-weight: bold;
+  background-image: url(./images/hero.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  
 }
 
 /* Centered text */
