--- a/src/components/BottomPanel/BottomPanel.scss
+++ b/src/components/BottomPanel/BottomPanel.scss
@@ -2,16 +2,16 @@
   height: 100%;
 }
 
-.BottomPanel-content {
-  position: absolute;
-}
+// .BottomPanel-content {
+//   //position: absolute;
+// }
 
-.BottomPanel-content-Filter {
-  width: 20%;
-  float: left;
-}
+// .BottomPanel-content-Filter {
+//   width: 20%;
+//   float: left;
+// }
 
-.BottomPanel-content-Items {
-  width: 80%;
-  float: left;
-}
+// .BottomPanel-content-Items {
+//   width: 80%;
+//   float: left;
+// }
